--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti, impedit?
+ <div>
+<div id="menubar">
+    <ul style="width: 33.33333333333333%; display: flex; align-items: center; justify-content: center;">
+        <li id="foundinp"><img src="/img/9035096_search_icon.svg" width="20px" height="20px"><input type="text" placeholder="Search in faceby"></li>
+    </ul>
+    <ul style="width: 33.33333333333333%; display: flex; align-items: center; justify-content: center; gap: 40px;">
+        <li>Home</li><li>Video</li><li>Vendas</li><li></li><li></li>
+    </ul>
+    <ul style="width: 33.33333333333333%; display: flex; align-items: center; justify-content: center;">
+        <li><button>add</button><button>mais</button></li>
+    </ul>
+</div>
+    <div></div>
+ </div>
 </body>
 </html>
