--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
         <li id="foundinp"><img src="/img/9035096_search_icon.svg" width="20px" height="20px"><input type="text" placeholder="Search in faceby"></li>
     </ul>
     <ul style="width: 33.33333333333333%; display: flex; align-items: center; justify-content: center; gap: 40px;">
-        <li>Home</li><li>Video</li><li>Vendas</li><li></li><li></li>
+        <li><a href="#" onclick="openpage('Home')"><img src="img/134213_home_house_building_main_icon.svg" width="26px" draggable="false"></a></li><li><a href="#" onclick="openpage('video')"><img src="img/8665830_tv_television_icon.svg" width="26px" draggable="false"></a></li><li><a href="#" onclick="openpage('store')"><img src="img/8665817_store_shopping_icon.svg" width="26px" draggable="false"></a></li></li>
     </ul>
     <ul style="width: 33.33333333333333%; display: flex; align-items: center; justify-content: center;">
         <li><button>add</button><button>mais</button></li>
     </ul>
 </div>
-    <div></div>
+<br>
+    <div id="Document">
+        <H1>404</H1>
+    </div>
  </div>
+ <script src="js/script.js"></script>
 </body>
 </html>
