--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#" onclick="openpage('Home')"><img src="img/134213_home_house_building_main_icon.svg" width="26px" draggable="false"></a></li><li><a href="#" onclick="openpage('video')"><img src="img/8665830_tv_television_icon.svg" width="26px" draggable="false"></a></li><li><a href="#" onclick="openpage('store')"><img src="img/8665817_store_shopping_icon.svg" width="26px" draggable="false"></a></li></li>
     </ul>
     <ul style="width: 33.33333333333333%; display: flex; align-items: center; justify-content: center;">
-        <li><button>add</button><button>mais</button></li>
+        <li id="todolist"><button id="addgroup"><img src="img/5097978-removebg-preview.png"  width="20px"></button><button>mais</button></li>
     </ul>
 </div>
 <br>
