--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
- <div>
+ <div style="width: 100%; height: 100%;">
 <div id="menubar">
     <ul style="width: 33.33333333333333%; display: flex; align-items: center; justify-content: center;">
-        <li id="foundinp"><img src="/img/9035096_search_icon.svg" width="20px" height="20px"><input type="text" placeholder="Search in faceby"></li>
+        <li id="foundinp"><img src="/img/9035096_search_icon.svg" width="20px" height="20px"><input type="text" placeholder="Search in faceby" style="width: 300px;"></li>
     </ul>
     <ul style="width: 33.33333333333333%; display: flex; align-items: center; justify-content: center; gap: 40px;">
         <li><a href="#" onclick="openpage('Home')"><img src="img/134213_home_house_building_main_icon.svg" width="26px" draggable="false"></a></li><li><a href="#" onclick="openpage('video')"><img src="img/8665830_tv_television_icon.svg" width="26px" draggable="false"></a></li><li><a href="#" onclick="openpage('store')"><img src="img/8665817_store_shopping_icon.svg" width="26px" draggable="false"></a></li></li>
@@ -19,7 +19,6 @@
         <li id="todolist"><button id="addgroup"><img src="img/5097978-removebg-preview.png"  width="20px"></button><button style="display: flex; align-items: center; justify-content: center;"><img src="img/1178861-removebg-preview.png" width="20px"></button></li>
     </ul>
 </div>
-<br>
     <div id="Document">
         <H1>404</H1>
     </div>
